[metadata]
name = vax
version = 0.0.2
url = https://github.com/thorwhalen/vax/vax
platforms = any
description_file = README.md
description = Finding covid vaccine appointment slots
root_url = https://github.com/thorwhalen/vax
license = mit
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = vax

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	requests

